# adventofcode2021

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md  crates.js  rust-toolchain.toml  search-index.js  settings.html  source-files.js
.github/workflows/: checks.yml  docs.yml  run.yml  test.yml
adventofcode2021/: all.html  fn.main.html  index.html  macro.create_day_tests!.html  macro.create_day_tests.html  macro.parse_input.html  macro.parse_input_raw!.html  macro.parse_input_raw.html  macro.parse_input_str!.html  macro.parse_input_str.html  macro.run_day!.html  macro.run_day.html  sidebar-items.js
adventofcode2021/args/: enum.Subcommand.html  fn.run_day_number.html  index.html  sidebar-items.js  struct.Args.html  struct.RunAllCommand.html  struct.RunDayCommand.html  trait.Execute.html
adventofcode2021/day/: fn.parse_lines.html  index.html  sidebar-items.js  trait.Challenge.html
adventofcode2021/days/: index.html  sidebar-items.js
adventofcode2021/days/day01/: index.html  sidebar-items.js  struct.Day01.html
adventofcode2021/days/day02/: enum.MoveDirection.html  index.html  sidebar-items.js  struct.Day02.html  struct.Move.html  struct.Submarine.html
adventofcode2021/days/day03/: enum.RatingComputationMethod.html  index.html  sidebar-items.js  struct.BitAnalyzer.html  struct.Day03.html
implementors/argh/: trait.FromArgs.js  trait.SubCommand.js  trait.SubCommands.js  trait.TopLevelCommand.js
src/: args.rs  day.rs  main.rs
src/adventofcode2021/: args.rs.html  day.rs.html  main.rs.html
src/days/: mod.rs
(+149 files in other folders)
