[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.6"
color-eyre = "0.5.11"
image = "0.23.14"
indoc = "1.0.3"
itertools = "0.10.1"
maplit = "1.0.2"
once_cell = "1.8.0"
owo-colors = "3.1.0"
paste = "1.0.6"
tap = "1.0.1"
